add dashboard process
